--- a/index.html
+++ b/index.html
@@ -53,30 +53,39 @@
       </div>
       <!---------- page-todo ---------->
       <div class="todo-container none">
-        <div class="modal-background">
-          <div class="modal-container">
-            <div class="modal-header">
-              변경하기
-            </div>
-            <div class="modal-content">
-              <div class="modal-input-wrapper">
-                <input class="modal-input" type="text">
-              </div>
-            </div>
-            <div class="modal-button-wrapper">
-              <button class="grey-btn primary-button">SAVE</button>
-              <button class="grey-btn">CLOSE</button>
-            </div>
-          </div>
-        </div>
+        <!-- modal area start -->
+        <div class="modal-background none"></div>
+        <!-- modal area end -->
         <div class="todo-header">
-          <input type="text" class="text-input" />
+          <input type="text" class="text-input" value="" />
           <button class="grey-btn" onclick="addList()">ADD</button>
         </div>
         <div class="todo-radio-wrapper">
-          <input type="radio" name="todo-complete" /><span>전체</span>
-          <input type="radio" name="todo-complete" /><span>미완료</span>
-          <input type="radio" name="todo-complete" /><span>완료</span>
+          <input
+          onchange="filterOnChange(this)"
+            type="radio"
+            id="all-checkbox"
+            name="todo-complete"
+            value="all"
+            checked="checked"
+          />
+          <label for="all-checkbox">전체</label>
+          <input
+          onchange="filterOnChange(this)"
+            type="radio"
+            id="uncom-checkbox"
+            name="todo-complete"
+            value="false"
+          />
+          <label for="uncom-checkbox">미완료</label>
+          <input
+          onchange="filterOnChange(this)"
+            type="radio"
+            id="com-checkbox"
+            name="todo-complete"
+            value="true"
+          />
+          <label for="com-checkbox">완료</label>
         </div>
         <div class="todolist-wrapper">
           <ul class="all-todo-items"></ul>
@@ -99,10 +108,11 @@
       </div>
     </div>
 
-    <script src="./js/main.js"></script>
-    <script src="./js/router.js"></script>
-    <script src="./js/navBar.js"></script>
-    <script src="./js/todo.js"></script>
     <script src="./js/calendar.js"></script>
+    <script src="./js/router.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/todo.js"></script>
+    <script src="./js/navBar.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
