feat: 캘린더페이지 필터기능 추가

--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
       <div class="calendar-container">
         <div id="calendar" class="calendar-wrap"></div>
         <div class="todolist-li-wrap">
-          <ul class="today-todo-list">
-            <li class="today-todo-item">투두1</li>
-            <li class="today-todo-item">투두2</li>
-          </ul>
+          <ol class="today-todo-list">
+          </ol>
         </div>
         <div onclick="floatBtnOnClick()" class="go-btn">
           <b><i class="fa-solid fa-plus"></i></b>
