--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
       <div class="calendar-container">
         <div class="logo-image-wrap"><div class="logo-image"></div></div>
         <div id="calendar" class="calendar-wrap"></div>
-        <div class="today-date-wrapper">
-          <p>2023-08-10</p>
-        </div>
+        <div class="today-date-wrapper"></div>
         <div class="todolist-li-wrap">
           <ol class="today-todo-list"></ol>
         </div>
