--- a/index.html
+++ b/index.html
@@ -1,123 +1,100 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yoo의 투두리스트</title>
-    <!-- font awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!-- google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- full calendar -->
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
-    <!-- dayjs -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.9/dayjs.min.js"
-      integrity="sha512-q4Xn+ZU2K+dqJPL8a3TiyGsDa31IkR/rLt/w+fy8jLrx8TdXj0dLM1Aq4aPXnOOKxHEya/bD9DePDB2DHm4jJQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <!-- css files -->
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/todo.css" />
-    <link rel="stylesheet" href="./css/navigation-bar.css" />
-    <link rel="stylesheet" href="./css/modal.css" />
-    <link rel="stylesheet" href="./css/calendar.css" />
-  </head>
-  <body>
-    <div id="root">
-      <!---------- page-calendar ---------->
-      <div class="calendar-container">
-        <div class="logo-image-wrap"><div class="logo-image"></div></div>
-        <div id="calendar" class="calendar-wrap"></div>
-        <div class="today-date-wrapper"></div>
-        <div class="todolist-li-wrap">
-          <ol class="today-todo-list"></ol>
-        </div>
-        <div onclick="floatBtnOnClick()" class="go-btn">
-          <b><i class="fa-solid fa-plus"></i></b>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yoo의 투두리스트</title>
+  <!-- PWA -->
+  <link rel="manifest" href="manifest.json">
+  <script>
+    if('serviceWorker' in navigator) {
+      navigator.serviceWorker
+        .register('./service_worker.js')
+        .then(() => {
+          console.log('서비스워커 등록 완료.');
+        })
+    }
+  </script>
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+  <!-- full calendar -->
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+  <!-- dayjs -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.9/dayjs.min.js"
+    integrity="sha512-q4Xn+ZU2K+dqJPL8a3TiyGsDa31IkR/rLt/w+fy8jLrx8TdXj0dLM1Aq4aPXnOOKxHEya/bD9DePDB2DHm4jJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- css files -->
+  <link rel="stylesheet" href="./css/reset.css" />
+  <link rel="stylesheet" href="./css/common.css" />
+  <link rel="stylesheet" href="./css/todo.css" />
+  <link rel="stylesheet" href="./css/navigation-bar.css" />
+  <link rel="stylesheet" href="./css/modal.css" />
+  <link rel="stylesheet" href="./css/calendar.css" />
+</head>
+
+<body>
+  <div id="root">
+    <!---------- page-calendar ---------->
+    <div class="calendar-container">
+      <div class="logo-image-wrap">
+        <div class="logo-image"></div>
       </div>
-      <!---------- page-todo ---------->
-      <div class="todo-container none">
-        <!-- modal area start -->
-        <div class="modal-background none"></div>
-        <!-- modal area end -->
-        <div class="todo-header">
-          <input
-            onkeyup="addListOnchange(event)"
-            type="text"
-            class="text-input"
-            value=""
-            placeholder="todo 입력..."
-          />
-          <button class="grey-btn" onclick="addList()">ADD</button>
-        </div>
-        <div class="todo-radio-wrapper">
-          <input
-            onchange="filterOnChange(this)"
-            type="radio"
-            id="all-checkbox"
-            name="todo-complete"
-            value="all"
-            checked="checked"
-          />
-          <label for="all-checkbox">전체</label>
-          <input
-            onchange="filterOnChange(this)"
-            type="radio"
-            id="uncom-checkbox"
-            name="todo-complete"
-            value="false"
-          />
-          <label for="uncom-checkbox">미완료</label>
-          <input
-            onchange="filterOnChange(this)"
-            type="radio"
-            id="com-checkbox"
-            name="todo-complete"
-            value="true"
-          />
-          <label for="com-checkbox">완료</label>
-        </div>
-        <div class="todolist-wrapper">
-          <ul class="all-todo-items"></ul>
-        </div>
+      <div id="calendar" class="calendar-wrap"></div>
+      <div class="today-date-wrapper"></div>
+      <div class="todolist-li-wrap">
+        <ol class="today-todo-list"></ol>
       </div>
-      <!---------- nav bar ---------->
-      <div class="navigation-bar">
-        <div
-          class="calender-page-icon-wrapper fo-light"
-          onclick="navMenuOnClick(this)"
-        >
-          <i class="fa-regular fa-calendar-days"></i>
-        </div>
-        <div
-          class="list-page-icon-wrapper fo-dark"
-          onclick="navMenuOnClick(this)"
-        >
-          <i class="fa-solid fa-list"></i>
-        </div>
+      <div onclick="floatBtnOnClick()" class="go-btn">
+        <b><i class="fa-solid fa-plus"></i></b>
       </div>
     </div>
+    <!---------- page-todo ---------->
+    <div class="todo-container none">
+      <!-- modal area start -->
+      <div class="modal-background none"></div>
+      <!-- modal area end -->
+      <div class="todo-header">
+        <input onkeyup="addListOnchange(event)" type="text" class="text-input" value="" placeholder="todo 입력..." />
+        <button class="grey-btn" onclick="addList()">ADD</button>
+      </div>
+      <div class="todo-radio-wrapper">
+        <input onchange="filterOnChange(this)" type="radio" id="all-checkbox" name="todo-complete" value="all"
+          checked="checked" />
+        <label for="all-checkbox">전체</label>
+        <input onchange="filterOnChange(this)" type="radio" id="uncom-checkbox" name="todo-complete" value="false" />
+        <label for="uncom-checkbox">미완료</label>
+        <input onchange="filterOnChange(this)" type="radio" id="com-checkbox" name="todo-complete" value="true" />
+        <label for="com-checkbox">완료</label>
+      </div>
+      <div class="todolist-wrapper">
+        <ul class="all-todo-items"></ul>
+      </div>
+    </div>
+    <!---------- nav bar ---------->
+    <div class="navigation-bar">
+      <div class="calender-page-icon-wrapper fo-light" onclick="navMenuOnClick(this)">
+        <i class="fa-regular fa-calendar-days"></i>
+      </div>
+      <div class="list-page-icon-wrapper fo-dark" onclick="navMenuOnClick(this)">
+        <i class="fa-solid fa-list"></i>
+      </div>
+    </div>
+  </div>
 
-    <script src="./js/calendar.js"></script>
-    <script src="./js/router.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/todo.js"></script>
-    <script src="./js/navBar.js"></script>
-    <script src="./js/modal.js"></script>
-  </body>
+  <script src="./js/calendar.js"></script>
+  <script src="./js/router.js"></script>
+  <script src="./js/main.js"></script>
+  <script src="./js/todo.js"></script>
+  <script src="./js/navBar.js"></script>
+  <script src="./js/modal.js"></script>
+</body>
+
 </html>
